--- a/client-myjss/src/app/modules/my-account/components/quotations/quotations.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotations/quotations.component.html
@@ -161,8 +161,8 @@
                         </div>
                       </td>
                       <td class="border-0 py-1 pe-0 ps-3 ps-sm-4">
-                        <i class="ai-triangle-alert fs-base text-danger ms-2" data-bs-toggle="tooltip"
-                          data-bs-placement="right" *ngIf="service.hasMissingInformations"
+                        <i class="ai-triangle-alert fs-base text-danger ms-2" style="-webkit-text-stroke: 1px;"
+                          data-bs-toggle="tooltip" data-bs-placement="right" *ngIf="service.hasMissingInformations"
                           title="Des renseignements complémentaires sont nécessaires : veuillez vous reporter au détail du devis"></i>
                       </td>
                       <td class="border-0 text-end py-1 pe-0 ps-3 ps-sm-4" *ngIf="service.servicePrice">
