myjss : add field modification

--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -279,7 +279,7 @@
                   </div>
                   <div class="mb-3" *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_DATE">
                     <label for="text-date" class="form-label">{{assoServiceFieldType.serviceFieldType.label}}</label>
-                    <div> <input class="form-control" id="text-date" type="datetime-local"
+                    <div> <input class="form-control" id="text-date" type="date"
                         [(ngModel)]="assoServiceFieldType.dateValue" />
                     </div>
                   </div>
